# Model-Mark-7-II

./: .gitignore  BUILD_DEPLOYMENT_GUIDE.md  CHANGES.md  CODE_CHANGES_DETAIL.md  COMPLETE_CHANGES.md  Cargo.toml  DEPLOYMENT_READY.md  DUAL_MODEL_VALIDATION_SUMMARY.md  FINAL_SUMMARY.md  GOVERNANCE_INTEGRATION_SUMMARY.md  IMPLEMENTATION_DETAILS.md  INFERENCE_INTEGRATION.md  MODEL_STANDARDIZATION_SUMMARY.md  OLLAMA_REMOVAL_SUMMARY.md  OLLAMA_TIMEOUT_FIX.md  QUICKSTART.md  README.md  README_INFERENCE_REPAIR.md  build.rs  jarviis_memory.sqlite  start_jarviis.py  start_servers.ps1  test_servers.py  verify_model_switching.py
.cargo/: config.toml
governance/: JARVIIS_Phase3_Architecture.docx  cognitive_core.py  identity_manager.py  jarviis.py  llm_backends.py  memory_manager.py
governance/secure/: master.key  owner_profile.enc
jarviis/: .gitignore  EXTENSION_EXAMPLE.py  LICENSE  example_with_memory.py  main.py  main_complete.py  requirements.txt  test_backend.py  test_cognitive_import.py  test_core.py  test_governance_integration.py  test_imports.py  test_llm_integration.py  test_memory.py  test_phase2.py
jarviis/config/: __init__.py  settings.py
jarviis/core/: __init__.py  interfaces.py  orchestrator.py  state_manager.py
jarviis/memory/: __init__.py  (+5 more)
model/: FINAL_VERIFICATION.txt  IMPLEMENTATION_COMPLETE.md  __init__.py  base_model_adapter.py  config.py  hybrid_model_selector.py  llm_router.py  model_runtime_manager.py  model_selector.py  routing_signals.py  scoring_engine.py  test_model_selection.py
models/: README.md
src/: config.rs  error.rs  lib.rs  main.rs
(+27 files in other folders)
